--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="container-section4-title">
+                <h1>Instagram</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                 when looking at its layout.</p>
+            </div>
+            <div class="container-section4">
+                <div>
+                    <img class="item" src="images/Flower 01.png" alt="">
+                </div>
+                <div>
+                    <img class="item"  src="images/Rectangle 4.png" alt="">
+                </div>
+                <div>
+                    <img class="item"   src="images/Rectangle 5.png" alt="">
+                </div>
+                <div>
+                    <img class="item"  src="images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <Footer>
 
