--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <Header class="banner-container">
         <div class="banner-item">
-            <h1>Lets's make <br>beautifule flowers a <br> part of your life</h1>
+            <h1>Lets's make <br>beautiful flowers a <br> part of your life</h1>
             <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
                 when looking at its layout. The point of using Lorem Ipsum is <br>that it has a more-or-less normal
                 distribution of letters.</p>
@@ -107,6 +107,16 @@
                 </div>
                 <div>
                     <img class="item"  src="images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container-section5">
+                <div>
+                    <h1>Get The Latest Deals</h1>
+                    <p>$30 coupon for first shopping</p>
+                    <input type="email" name="Email" id="" placeholder="Enter your email here ...." required>
+                    <button>Subscribe</button>
                 </div>
             </div>
         </section>
