add footer section

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 </div>
             </div>
             <div class="bonus-list">
-                    <li>Pink Flower Tree</li>
-                    <li>Pink Flower Tree</li>
-                    <li>Pink Flower Tree</li>
+                <li>Pink Flower Tree</li>
+                <li>Pink Flower Tree</li>
+                <li>Pink Flower Tree</li>
             </div>
         </section>
         <section>
@@ -93,20 +93,20 @@
             <div class="container-section4-title">
                 <h1>Instagram</h1>
                 <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page
-                 when looking at its layout.</p>
+                    when looking at its layout.</p>
             </div>
             <div class="container-section4">
                 <div>
                     <img class="item" src="images/Flower 01.png" alt="">
                 </div>
                 <div>
-                    <img class="item"  src="images/Rectangle 4.png" alt="">
+                    <img class="item" src="images/Rectangle 4.png" alt="">
                 </div>
                 <div>
-                    <img class="item"   src="images/Rectangle 5.png" alt="">
+                    <img class="item" src="images/Rectangle 5.png" alt="">
                 </div>
                 <div>
-                    <img class="item"  src="images/Rectangle 6.png" alt="">
+                    <img class="item" src="images/Rectangle 6.png" alt="">
                 </div>
             </div>
         </section>
@@ -122,7 +122,16 @@
         </section>
     </main>
     <Footer>
-
+        <div class="footer-container">
+            <div>
+                <h1><span>Flower</span>Shop</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a
+                    page when looking at its layout.
+                </p>
+                <p>&commat;2020-2023, FlowerShop.com. All rights reserved.</p>
+                
+            </div>
+        </div>
     </Footer>
 </body>
 
