our product add

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
     </Header>
     <main>
+        <!-- our flowers  -->
         <section>
             <div class="bonus-containerbar">
                 <h1>Our Featured Flowers</h1>
@@ -56,6 +57,7 @@
                 <li>Pink Flower Tree</li>
             </div>
         </section>
+        <!-- optional part  -->
         <section>
             <section>
                 <div class="optional-part">
@@ -76,6 +78,7 @@
                 </div>
             </section>
         </section>
+        <!-- Hot deal offer  -->
         <section>
             <div class="container-section3">
                 <div>
@@ -89,6 +92,7 @@
                 </div>
             </div>
         </section>
+        <!-- instagram section -->
         <section>
             <div class="container-section4-title">
                 <h1>Instagram</h1>
@@ -107,6 +111,54 @@
                 </div>
                 <div>
                     <img class="item" src="images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- our product -->
+        <section>
+            <div class="center-text">
+                <h2>Our Product</h2>
+            </div>
+            <div class="new-content">
+                <div class="row">
+                    <img src="images/s-1.jpg" alt="">
+                    <h4>Red White</h4>
+                    <h5>$15.00</h5>
+                    <a href="#">Shop Now</a>
+                </div>
+                <div class="row">
+                    <img src="images/s-4.jpg" alt="">
+                    <h4>Primrose</h4>
+                    <h5>$15.00</h5>
+                    <a href="#">Shop Now</a>
+                </div>
+                <div class="row">
+                    <img src="images/s-2.jpg" alt="">
+                    <h4>Yellow Fellow</h4>
+                    <h5>$15.00</h5>
+                    <a href="#">Shop Now</a>
+                </div>
+                <div class="row">
+                    <img src="images/s-3.jpg" alt="">
+                    <h4>Blushing Lilies</h4>
+                    <h5>$15.00</h5>
+                    <a href="#">Shop Now</a>
+
+                </div>
+            </div>
+            <div class="new-content">
+                <div class="row">
+                    <img src="images/1 (2).jpg" alt="">
+                    <h4>Wedding Flower</h4>
+                    <h5>$15.00</h5>
+                    <a href="#">Shop Now</a>
+
+                </div>
+                <div class="row">
+                    <img src="images/2 (1).jpg" alt="">
+                    <h4>Serenity</h4>
+                    <h5>$15.00</h5>
+                    <a href="#">Shop Now</a>
                 </div>
             </div>
         </section>
@@ -129,7 +181,7 @@
                     page when looking at its layout.
                 </p>
                 <h6>&commat;2020-2023, FlowerShop.com. All rights reserved.</h6>
-                
+
             </div>
         </div>
     </Footer>
